# plus7pay-yookassa-payment-proposal

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  security.py  services.py  yookassa_client.py
docs/: api-examples.md  architecture.md  security-checklist.md
tests/: test_payments.py
