[project]
name = "plus7pay-yookassa-payment-proposal"
version = "0.1.0"
description = "FastAPI demo/proposal for a YooKassa payment backend: payments, saved methods, recurring charges, holds, refunds, webhooks, and secure persistence."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "httpx>=0.27",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

